--- a/pom.xml
+++ b/pom.xml
@@ -22,15 +22,16 @@
     </dependencies>
 
     <build>
-        <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
+                    <version>3.3.0</version>
                     <configuration>
                         <archive>
                             <manifest>
                                 <mainClass>com.napier.sem.App</mainClass>
-                            </manifest>
+                            </manifest>`x
                         </archive>
                         <descriptorRefs>
                             <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -47,7 +48,6 @@
                     </executions>
                 </plugin>
             </plugins>
-        </pluginManagement>
     </build>
 
 
