--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
       script: mvn test -Dtest=MyTest
     - stage: integration tests
       jdk: oraclejdk11
-      script: echo "Integration Tests"
+      script: mvn test -Dtest=AppIntegrationTest
     - stage: deploy
       install: skip
       jdk: oraclejdk11
@@ -38,3 +38,5 @@ stages:
   - integration tests
   - name: deploy
     if: branch = main
+  - name: deploy
+    if: branch = develop
