deploy on develop branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ jobs:
 stages:
   - unit tests
   - integration tests
-  - name: deploy
+  - deploy
     if: branch = main
   - deploy
     if: branch = develop 
