--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ stages:
   - unit tests
   - integration tests
   - name: deploy
-    if: branch = main
+    if: branch = main OR branch = develop
     
 after_success: 
   - bash <(curl -s https://codecov.io/bash)
